--- a/public/modules/finances/css/multi-finances.css
+++ b/public/modules/finances/css/multi-finances.css
@@ -590,6 +590,13 @@ hr{
 [id*=withdrawal-value-] {
     border-radius: 0 8px 8px 0;
 }
+
+.o-angle-down-1.d-md-none {
+    transform: rotate(0deg);
+}
+.o-angle-down-1.d-md-none.collapsed {
+    transform: rotate(180deg);
+}
 @media (max-width: 991px) {
     .badge {
          /*width: unset;*/
@@ -610,5 +617,34 @@ hr{
     }
     #gateway-redirection i::before {
         color: #FFF;
+    }
+
+    .card,.card-skeleton{
+        min-height: 150px;
+    }
+
+    .card-gateway h6 {
+        border-top: 1px solid #F4F4F4;
+        margin-top:18px;
+        padding-top:18px;
+        margin-bottom: 0;
+    }
+
+    [id*=container_info_] > h6:nth-child(2), [id*=container_info_] > h4:nth-child(3) {
+        border-color: transparent;
+        margin-top: 0;
+        margin-bottom: 0;
+        padding-top: 0;
+    }
+
+    .card-gateway h4 {
+        margin-top: 0;
+        border-bottom: none;
+        padding-bottom: 0;
+        /*margin-bottom: 0;*/
+    }
+
+    .card-gateway h4:last-child {
+        margin-bottom: 18px;
     }
 }
