--- a/public/modules/global/css/global.css
+++ b/public/modules/global/css/global.css
@@ -1850,6 +1850,7 @@ tbody td{
     font-size: 16px;
     overflow-y: auto;
     scrollbar-width: none;
+    z-index: 999;
 }
 
 .sirius-select-container .sirius-select-options::-webkit-scrollbar {
