--- a/public/modules/global/css/global.css
+++ b/public/modules/global/css/global.css
@@ -1859,7 +1859,6 @@ tbody td{
 
 .sirius-select-container .sirius-select-options div {
     padding: 16px;
-    background: #FFFFFF;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -1875,14 +1874,20 @@ tbody td{
 }
 
 #pagination-plans .nav-btn {
+    color: #3D4456;
+    background: #FFFFFF !important;
+    border: 1px solid #EBEBEB !important;
     border-radius: 8px;
     margin-right: 10px;
     min-width: 40px;
     height: 40px;
+    font-weight: normal;
     font-size: 16px;
 }
 #pagination-plans .nav-btn.active {
     border-radius: 8px;
+    color: #2E85EC !important;
+    background: #FFFFFF !important;
     border: 1px solid #2E85EC !important;
 }
 
