--- a/public/modules/sales/css/index.css
+++ b/public/modules/sales/css/index.css
@@ -1,7 +1,7 @@
 /* WAS IN DOCUMENT */
 .select2-selection--single {
     border: 1px solid #dddddd !important;
-    border-radius: .215rem !important;
+    border-radius: 8px !important;
     height: 43px !important;
 }
 .select2-selection__rendered {
@@ -79,6 +79,9 @@ span.select2-selection.select2-selection--multiple{
 .select2-container--open{
     border-color: #88BFFF;
 }
+span.select2-selection.select2-selection--single{
+    border: none !important;
+}
 
 ::-webkit-scrollbar {
     width: 12px;
@@ -107,10 +110,10 @@ li.select2-selection__choice{
 /* END CONFIGURATIONS MULTIPLE SELECT 2 */
 
 .default-border{
-    border : 1px solid #e0e7ee !important;
+    border: 1px solid #e0e7ee !important;
 }
 .default-border :focus{
-    border : 1px solid #88BFFF !important;
+    border: 1px solid #88BFFF !important;
 }
 
 .table-warning-roll {
