--- a/public/modules/checkouteditor/css/style.css
+++ b/public/modules/checkouteditor/css/style.css
@@ -221,12 +221,12 @@ input[type=number] {
 
 .checkout-textarea {
   width: 100%;
-  height: 70px;
+  height: 100px;
   border: 1px solid #C4C4C4;
   box-sizing: border-box;
   border-radius: 8px;
   resize: none;
-  padding: 5px;
+  padding: 5px 10px;
 }
 
 .dot {
@@ -311,8 +311,7 @@ hr {
   justify-content: space-between;
   align-items: center;
   height: 60px;
-  width: inherit;
-  max-width: 100%;
+  width: 700px;
   padding: 10px 20px 10px 20px;
   z-index: 9999;
 
@@ -510,6 +509,34 @@ textarea:focus {
 
 #zoom-slide {
   padding: 0 !important;
+}
+
+.editor-container {
+  max-width: 670px;
+}
+
+.switch-holder.labeled {
+  display: flex;
+}
+
+.switch-holder.labeled .switch {
+  margin-right: 7px;
+}
+
+.switch-label {
+  display: flex;
+  align-items: center;
+  color: #37474F;
+  font-weight: bold;
+  margin-bottom: 0;
+}
+
+.switch-label.active:after {
+  content: 'Ativado';
+}
+
+.switch-label:not(.active):after {
+  content: 'Desativado';
 }
 
 
