--- a/public/modules/finances/css/new-finances.css
+++ b/public/modules/finances/css/new-finances.css
@@ -1,3 +1,9 @@
+*:focus,
+.bootstrap-select .dropdown-toggle:focus,
+.bootstrap-select>select.mobile-device:focus+.dropdown-toggle {
+    outline: none !important;
+}
+
 .price-holder.antecipacao {
     cursor: pointer;
 }
