--- a/public/modules/global/css/global.css
+++ b/public/modules/global/css/global.css
@@ -1093,7 +1093,7 @@ tbody td{
 
 .sirius-select-container {
     position: relative;
-    width: 285px;
+    min-width: 285px;
 }
 
 .sirius-select-container .sirius-select-text {
@@ -1141,6 +1141,7 @@ tbody td{
     font-size: 16px;
     overflow-y: auto;
     scrollbar-width: none;
+    z-index: 100;
 }
 
 .sirius-select-container .sirius-select-options::-webkit-scrollbar {
