Util finances its ready

--- a/public/modules/attendance/css/index.css
+++ b/public/modules/attendance/css/index.css
@@ -1052,3 +1052,9 @@ button:active {
         display: none;
     }
 }
+.date-picker-wrapper.no-topbar.no-gap.single-month{
+    border-color: #88BFFF;
+}
+.sirius-select-options{
+    border-color: #88BFFF !important;
+}
