--- a/public/modules/global/css/loading.css
+++ b/public/modules/global/css/loading.css
@@ -228,7 +228,7 @@
 
 .sirius-loading {
     background-color: rgba(255, 255, 255, 1);
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     top: 0;
