--- a/public/modules/checkouteditor/css/preview-styles.css
+++ b/public/modules/checkouteditor/css/preview-styles.css
@@ -430,6 +430,7 @@
     justify-content: space-between;
     gap: 10px;
     width: 100%;
+    height: 100%;
 }
 
 .preview-body-visual-content.desktop {
@@ -447,7 +448,7 @@
     width: 60%;
     height: 130px;
     background-color: #fff;
-    padding: 5px;
+    padding: 10px;
     -webkit-transition: all 0.5s;
     -moz-transition: all 0.5s;
     -ms-transition: all 0.5s;
@@ -458,11 +459,12 @@
 .visual-content-left.three-steps {
     border-radius: 8px;
     margin-bottom: 10px;
+    height: 90%;
 }
 
 .visual-content-left.unique {
     border-radius: 8px 8px 0 0;
-    height: 140px;
+    height: 100%;
 }
 
 .visual-content-right {
@@ -543,8 +545,110 @@
 .theme-ready {
     display: inline-flex;
     flex-wrap: wrap;
-    width: 100%;
+    width: 100%;    
 }
+
+.theme-radio[type="radio"] {
+    position: absolute;
+    left: -9999px;
+}
+
+.theme-radio[type="radio"] + label:hover {
+    opacity: 0.7;
+}
+
+.theme-radio[type="radio"] + label {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    width: 80px;
+    height: 100px;
+    padding: 5px;
+    transition: background 0.5s;
+    font-size: 10px;
+    color: #37474f;
+    margin: 0 8px;
+    transition: opacity 0.5s;
+}
+
+.theme-primary-color {
+    width: 60px;
+    height: 35px;
+    border-radius: 10px 10px 0 0;
+}
+
+.theme-secondary-color {
+    width: 60px;
+    height: 25px;
+    border-radius: 0 0 10px 10px;
+}
+
+.theme-label {
+    height: 15px;
+}
+
+.theme-radio[type="radio"]:checked + label {
+    background: #fff;
+    border: 2px solid #2e85ec;
+    border-radius: 10px;
+}
+
+/* ------------------- Custom Color Picker --------------------- */
+
+input[type="color"]::-webkit-color-swatch-wrapper {
+    padding: 0;
+}
+
+input[type="color"]::-webkit-color-swatch {
+    border: none;
+    border-radius: 8px;
+}
+
+input[type="color"] {
+    border: none;
+    width: 100px;
+    height: 30px;
+    padding: 0;
+
+    -webkit-appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
+    -o-appearance: none;
+}
+
+input[type="color"]::-webkit-color-swatch-wrapper,
+input[type="color"]::-moz-color-swatch-wrapper,
+input[type="color"]::-ms-color-swatch-wrapper,
+input[type="color"]::-o-color-swatch-wrapper {
+    padding: 0;
+}
+
+input[type="color"]::-webkit-color-swatch,
+input[type="color"]::-moz-color-swatch,
+input[type="color"]::-ms-color-swatch,
+input[type="color"]::-o-color-swatch,
+input[type="color"]::color-swatch {
+    border: none;
+    border-radius: 8px;
+}
+
+input[type="color"]::-moz-color-swatch {
+    border-radius: 10px;
+    border-style: none;
+}
+
+.color-picker {
+    transition: opacity 0.7s;
+    cursor: pointer;
+}
+
+.color-picker:hover {
+    opacity: 0.7;
+}
+
 
 #preview_visual,
 #preview_payment {
