--- a/public/modules/finances/css/multi-finances.css
+++ b/public/modules/finances/css/multi-finances.css
@@ -1,3 +1,4 @@
+
 *:focus,
 .bootstrap-select .dropdown-toggle:focus,
 .bootstrap-select>select.mobile-device:focus+.dropdown-toggle {
@@ -20,16 +21,7 @@ body {
     background-color: #f3f7f9;
     opacity: 1;
 }
-/* .label-new{
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 8px 16px;
-    width: 80px;
-    height: 30px;
-    background: #2E85EC;
-    border-radius: 36px;
-} */
+
 .badge-info{
     background: #2E85EC;
     border-radius: 36px;
@@ -40,9 +32,18 @@ body {
     border-radius: 8px;
     color: #f3f7f9;
     height: 48px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     padding: 12px 32px;
 }
@@ -82,8 +83,14 @@ body {
     font-size: 15px !important;
 }
 .owl-next, .owl-prev {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
     display: flex !important;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 .owl-carousel .owl-nav .owl-next:active{
@@ -138,36 +145,39 @@ body {
     cursor: pointer;
     top: 100px !important;
 }
-
 .owl-carousel .owl-prev.disabled,
 .owl-carousel .owl-next.disabled{
     pointer-events: none;
     opacity: unset;
-    background: #FFF;
+    background: #E3E3E3;
 }
 .owl-carousel .owl-prev.disabled::before,
 .owl-carousel .owl-next.disabled::before{
     color: #929292;
 }
 .owl-carousel .prev-slide{
-background: url(nav-icon.png) no-repeat scroll 0 0;
-left: -33px;
+    background: url(nav-icon.png) no-repeat scroll 0 0;
+    left: -33px;
 }
 .owl-carousel .next-slide{
-background: url(nav-icon.png) no-repeat scroll -24px 0px;
-right: -33px;
+    background: url(nav-icon.png) no-repeat scroll -24px 0px;
+    right: -33px;
 }
 .owl-carousel .prev-slide:hover{
-background-position: 0px -53px;
+    background-position: 0px -53px;
 }
 .owl-carousel .next-slide:hover{
-background-position: -24px -53px;
+    background-position: -24px -53px;
 }
 .hide-withdraw {
+    background: -webkit-gradient(linear, left top, right top, color-stop(10%, #FFFFFF), color-stop(182.5%, rgba(244, 244, 244, 0)));
+    background: -o-linear-gradient(left, #FFFFFF 10%, rgba(244, 244, 244, 0) 182.5%);
     background: linear-gradient(90deg, #FFFFFF 10%, rgba(244, 244, 244, 0) 182.5%);
     border-radius: 60px;
 }
 .flex-center{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     justify-items: center;
 }
@@ -209,6 +219,9 @@ background-position: -24px -53px;
 .asScrollable-container {
     width: 110% !important
 }
+@-webkit-keyframes m {
+    to {background-position:left;}
+}
 @keyframes m {
     to {background-position:left;}
 }
@@ -216,12 +229,10 @@ background-position: -24px -53px;
     display:none;
     height:335px;
 }
-/* #card-history{
-    max-height: 454px;
-    overflow-y: auto;
-} */
 
 .list-linear-gradient-top{
+    background: -webkit-gradient(linear, left top, left bottom, from(white), to(transparent));
+    background: -o-linear-gradient(top, white, transparent);
     background: linear-gradient(to bottom, white, transparent);
     background: -webkit-linear-gradient(to bottom, white, transparent);
     height: 15px;
@@ -230,6 +241,8 @@ background-position: -24px -53px;
     position: relative;
 }
 .list-linear-gradient-bottom{
+    background: -webkit-gradient(linear, left bottom, left top, from(white), color-stop(rgba(255, 255, 255, 0.8)), to(transparent));
+    background: -o-linear-gradient(bottom, white, rgba(255, 255, 255, 0.8), transparent);
     background: linear-gradient(to top, white, rgba(255, 255, 255, 0.8), transparent);
     background: -webkit-linear-gradient(to top, white, rgba(255, 255, 255, 0.8), transparent);
     height: 30px;
@@ -287,10 +300,14 @@ background-position: -24px -53px;
 
 .redirect::before {
     color: #107DFF;
+    -webkit-transform: unset;
+    -ms-transform: unset;
     transform: unset;
 }
 .default-hover:hover {
     color: #2E85EC;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
     transition: 0.3s;
 }
 
@@ -313,7 +330,6 @@ background-position: -24px -53px;
 .radio-badge.blue {
     background-color: #2E85EC;
 }
-
 .card-gateway h4 {
     margin-top:3px;
     border-bottom: 1px solid #F4F4F4;
@@ -341,7 +357,6 @@ background-position: -24px -53px;
 .btn-outline-success:hover {
     background: #1BE4A8;
 }
-
 .o-angle-down-1 {
     color: #636363;
     font-size: 30px;
@@ -354,11 +369,16 @@ background-position: -24px -53px;
     color: #636363;
 }
 .input-holder {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 .overflow-bank-name {
     overflow: hidden;
+    -o-text-overflow: ellipsis;
     text-overflow: ellipsis;
     white-space: nowrap;
     font-size: 11px
@@ -366,7 +386,6 @@ background-position: -24px -53px;
 .bg-light {
     background-color: white !important;
 }
-
 .bg-light, .bg-lighter {
     border: 1px solid transparent;
 }
@@ -382,9 +401,11 @@ background-position: -24px -53px;
 .active-outline .o-gear-1 {
     color: #2E85EC;
 }
-
 .slider.round:before {
+    -webkit-box-shadow: none;
     box-shadow: none;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
     transform: rotate(45deg);
 }
 #gateway-redirection{
@@ -394,10 +415,17 @@ background-position: -24px -53px;
     border-radius: 20px;
     border: 0;
 
+    display: -webkit-box;
+
+    display: -ms-flexbox;
+
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 
     -webkit-transition: all 0.5s;
+    -o-transition: all 0.5s;
     transition: all 0.5s;
 
     cursor: pointer;
@@ -420,12 +448,12 @@ background-position: -24px -53px;
     white-space: nowrap;
     overflow: hidden;
     -webkit-transition: max-width 1s;
+    -o-transition: max-width 1s;
     transition: max-width 1s;
 }
 #gateway-redirection:hover span {
     max-width: 7rem;
 }
-
 span.font-size-16 {
     color: #9E9E9E;
 }
@@ -435,9 +463,18 @@ span.font-size-16 {
     border-radius: 8px;
     color: #636363;
     height: 48px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     padding: 12px 32px;
 }
@@ -449,7 +486,6 @@ span.font-size-16 {
 
 .input-group-text{
     background: #F1F1F1;
-    /* font-size: 16px; */
     color: #636363;
 }
 hr{
@@ -461,17 +497,18 @@ hr{
 .menu-active span:first-child {
     padding: 11px 10px 10px 15px;
 }
-
 #container-withdraw .row.mx-0:nth-child(even), #skeleton-withdrawal2 {
     background-color: #F6F7F9;
 }
 
 #skeleton-withdrawal2 .skeleton {
+    background: -webkit-gradient(linear, left top, right top, color-stop(40%, #FFF), color-stop(#ECECEC), color-stop(60%, #FFF)) right/300% 100%;
+    background: -o-linear-gradient(left, #FFF 40%, #ECECEC, #FFF 60%) right/300% 100%;
     background: linear-gradient(90deg, #FFF 40%, #ECECEC, #FFF 60%) right/300% 100%;
 }
-
 .badge {
     width: -moz-min-content;
+    width: -webkit-min-content;
     width: min-content;
     white-space: pre-line;
 }
@@ -506,6 +543,8 @@ hr{
     -o-transition: all 0.3s;
     transition: all 0.3s;
 
+    -webkit-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
     transform: rotate(180deg);
 }
 .slider::before {
@@ -514,18 +553,18 @@ hr{
 input:checked + .slider::before {
     left: -3px;
 }
-
 @media (max-width: 991px) {
     .new-title {
         margin-left: 0;
     }
     .badge {
-         height: unset;
-         padding: 8px 16px;;
-         border: unset;
-         box-shadow: unset;
-         text-indent: unset;
-         white-space: unset;
+        height: unset;
+        padding: 8px 16px;;
+        border: unset;
+        -webkit-box-shadow: unset;
+        box-shadow: unset;
+        text-indent: unset;
+        white-space: unset;
     }
 
     #gateway-redirection span {
