--- a/public/modules/finances/css/multi-finances.css
+++ b/public/modules/finances/css/multi-finances.css
@@ -553,6 +553,12 @@ hr{
 input:checked + .slider::before {
     left: -3px;
 }
+
+.total-available-balance {
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+}
 @media (max-width: 991px) {
     .new-title {
         margin-left: 0;
