--- a/public/modules/checkouteditor/css/style.css
+++ b/public/modules/checkouteditor/css/style.css
@@ -1,569 +1,614 @@
 .grid-checkout-editor {
-  display: grid;
-  grid-template-columns: 1fr 0.8fr;
-  grid-template-rows: auto auto auto auto auto;
-  gap: 20px 20px;
-  grid-auto-flow: row;
-  grid-template-areas:
-    "select-type           preview"
-    "visual                preview"
-    "payment               preview"
-    "post-purchase-pages   preview"
-    "buttons               buttons";
-  font-family: 'Muli', sans-serif;
-  font-style: normal;
-  line-height: 30px;
-  color: #37474F;
-  margin-bottom: 20px;
+    display: grid;
+    grid-template-columns: 1fr 0.8fr;
+    grid-template-rows: auto auto auto auto auto;
+    gap: 20px 20px;
+    grid-auto-flow: row;
+    grid-template-areas:
+        "select-type           preview"
+        "visual                preview"
+        "payment               preview"
+        "post-purchase-pages   preview"
+        "buttons               buttons";
+    font-family: "Muli", sans-serif;
+    font-style: normal;
+    line-height: 30px;
+    color: #37474f;
+    margin-bottom: 20px;
 }
 
 .form-checkout-editor {
-  width: 100%;
+    width: 100%;
 }
 
-.select-type { 
-  grid-area: select-type; 
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.select-type {
+    grid-area: select-type;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .select-type h1,
 .title-icon h1 {
-  margin-bottom: 0px;
-  padding: 5px;
+    margin-bottom: 0px;
+    padding: 5px;
 }
 
-.visual { 
-  grid-area: visual; 
+.visual {
+    grid-area: visual;
 }
 
-.payment { 
-  grid-area: payment; 
+.payment {
+    grid-area: payment;
 }
 
-.post-purchase-pages { 
-  grid-area: post-purchase-pages; 
+.post-purchase-pages {
+    grid-area: post-purchase-pages;
 }
 
-.preview { 
-  grid-area: preview;
+.preview {
+    grid-area: preview;
 }
 
 .editor-buttons {
-  grid-area: buttons;
+    grid-area: buttons;
 }
 
 .checkout-content {
-  padding: 15px;
-  background: #FFFFFF;
-  border-radius: 12px;
+    padding: 15px;
+    background: #ffffff;
+    border-radius: 12px;
 }
 
 .checkout-title {
-  font-weight: normal;
-  font-size: 20px;
-  margin: 0 !important;
-  line-height: 2 !important;
+    font-weight: normal;
+    font-size: 20px;
+    margin: 0 !important;
+    line-height: 2 !important;
 }
 
 .checkout-subtitle {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .checkout-subtitle > p {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 12px;
-  line-height: 18px;
-  color: #878787;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 18px;
+    color: #878787;
 }
 
 .tag {
-  font-size: 10px;
-  padding: 3.5px 5px 3.5px 5px;
-  text-align: center;
-  background: #2E85EC;
-  color: #FFF;
-  border-radius: 99px;
-  margin-right: 10px;
+    font-size: 10px;
+    padding: 3.5px 5px 3.5px 5px;
+    text-align: center;
+    background: #2e85ec;
+    color: #fff;
+    border-radius: 99px;
+    margin-right: 10px;
 }
 
 .tag b {
-  margin: 0 5px 0 5px;
+    margin: 0 5px 0 5px;
 }
 
 .title-icon {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .icon-title {
-  width: 30px;
-  height: 30px;
-  margin-right: 10px;
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
 }
 
-
-.title-buttons-group{
-  display:flex;
-  justify-content: space-between;
-  margin-bottom: 10px;
+.title-buttons-group {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
 }
 
-.upload-container{
-  display: inline-flex;
-  flex-wrap: wrap;
-  gap: 10px;
+.upload-container {
+    display: inline-flex;
+    flex-wrap: wrap;
+    gap: 10px;
 }
 
 .instrunctios {
-  min-width: 180px;
-  align-self: flex-end;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 10px;
-  line-height: 15px;
-  white-space: pre-line;
-  color: #A8A8A8;
+    min-width: 180px;
+    align-self: flex-end;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 10px;
+    line-height: 15px;
+    white-space: pre-line;
+    color: #a8a8a8;
 }
 
 .banner-intructions {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  flex: 1 1 1 0px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    flex: 1 1 1 0px;
 }
 
 .line-button {
-  min-height: 37px;
-  min-width: 150px;
-  background-color: #FFF;
-  border: 2px solid #2E85EC;
-  border-radius: 8px;
+    min-height: 37px;
+    min-width: 150px;
+    background-color: #fff;
+    border: 2px solid #2e85ec;
+    border-radius: 8px;
 
-  font-style: normal;
-  font-weight: bold;
-  font-size: 14px;
-  color: #2E85EC;
-
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    color: #2e85ec;
 }
 
 .button-template {
-  display: flex;
-  width: 100%;
-  height: 100%;
-  flex-direction: row-reverse;
-  align-items: center;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    flex-direction: row-reverse;
+    align-items: center;
 }
 
 .checkout-label {
-  color: #37474F;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 20px;
-  margin-bottom: 5px !important;
+    color: #37474f;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    margin-bottom: 5px !important;
 }
 
 .time-div {
-  display: flex;
-  min-width: 100px;
+    display: flex;
+    min-width: 100px;
 }
 
 .time-input {
-  height: 40px;
-  width: 50px;
-  border: 1px solid #C4C4C4;
-  box-sizing: border-box;
-  border-radius: 8px 0px 0px 8px;
-  border-right: none;
-  padding: 8px;
+    height: 40px;
+    width: 50px;
+    border: 1px solid #c4c4c4;
+    box-sizing: border-box;
+    border-radius: 8px 0px 0px 8px;
+    border-right: none;
+    padding: 8px;
 }
 
-input[type=number]::-webkit-inner-spin-button {
-  -webkit-appearance: none;
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
 }
 
-input[type=number] {
-  -moz-appearance: textfield;
+input[type="number"] {
+    -moz-appearance: textfield;
 }
 
 .min-input-label {
-  height: 40px;
-  width: 50px;
-  border: 1px solid #C4C4C4;
-  box-sizing: border-box;
-  border-radius: 0px 8px 8px 0px;
+    height: 40px;
+    width: 50px;
+    border: 1px solid #c4c4c4;
+    box-sizing: border-box;
+    border-radius: 0px 8px 8px 0px;
 
-  display:flex;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 100%;
-  color: #454545;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 100%;
+    color: #454545;
 }
 
 .input-container {
-  margin-bottom: 10px;
-  display: flex;
-  flex-direction: column;
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
 }
 
 .observation-span {
-  font-size: 12px;
-  line-height: 15px;
-  color: #C4C4C4;
+    font-size: 12px;
+    line-height: 15px;
+    color: #c4c4c4;
 }
 
 .checkout-textarea {
-  width: 100%;
-  height: 100px;
-  border: 1px solid #C4C4C4;
-  box-sizing: border-box;
-  border-radius: 8px;
-  resize: none;
-  padding: 5px 10px;
+    width: 100%;
+    height: 100px;
+    border: 1px solid #c4c4c4;
+    box-sizing: border-box;
+    border-radius: 8px;
+    resize: none;
+    padding: 5px 10px;
 }
 
 .dot {
-  height: 10px;
-  width: 10px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  margin-right: 5px;
+    height: 10px;
+    width: 10px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    margin-right: 5px;
 }
 
 .banner-type-group {
-  display: flex;
+    display: flex;
 }
 
 .row-flex {
-  display: flex;
-  gap: 10px;
+    display: flex;
+    gap: 10px;
 }
 
 .invoice-description-message {
-  flex: 2;
+    flex: 2;
 }
 
 .company-billing {
-  flex: 3;
+    flex: 3;
 }
 
 .checkout-input-text {
-  height: 43px;
+    height: 43px;
 }
 
 .tagged-input {
-  width: 60px;
+    width: 60px;
 }
 
 .tagged-input-div {
-  display: flex;
-  min-width: 100px;
+    display: flex;
+    min-width: 100px;
 }
 
 .tagged-input {
-  height: 40px;
-  width: 100%;
-  border: 1px solid #C4C4C4;
-  box-sizing: border-box;
-  border-radius: 8px 0px 0px 8px;
-  border-right: none;
-  padding: 8px;
+    height: 40px;
+    width: 100%;
+    border: 1px solid #c4c4c4;
+    box-sizing: border-box;
+    border-radius: 8px 0px 0px 8px;
+    border-right: none;
+    padding: 8px;
 }
 
 .input-tag {
-  height: 40px;
-  width: 50px;
-  border: 1px solid #C4C4C4;
-  box-sizing: border-box;
-  border-radius: 0px 8px 8px 0px;
+    height: 40px;
+    width: 50px;
+    border: 1px solid #c4c4c4;
+    box-sizing: border-box;
+    border-radius: 0px 8px 8px 0px;
 
-  display:flex;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 100%;
-  color: #454545;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 100%;
+    color: #454545;
 }
 
 .preview-payment {
-  background: black;
-  border: 1px solid #fff;
-  box-sizing: border-box;
-  border-radius: 10px;
+    background: black;
+    border: 1px solid #fff;
+    box-sizing: border-box;
+    border-radius: 10px;
 }
 
 hr {
-  margin: 25px -15px 25px -15px;
+    margin: 25px -15px 25px -15px;
 }
 
 .save-changes {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 60px;
-  width: 700px;
-  padding: 10px 20px 10px 20px;
-  z-index: 9999;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 60px;
+    width: 700px;
+    padding: 10px 20px 10px 20px;
+    z-index: 9999;
 
-  position: fixed; 
-  bottom: 0;
+    position: fixed;
+    bottom: 0;
 
-  border-radius: 10px 10px 0 0;
-  background-color: #2E85EC;
-  color: #fff;
+    border-radius: 10px 10px 0 0;
+    background-color: #2e85ec;
+    color: #fff;
 }
 
 .save-changes-button-group {
-  display: flex;
-  width: fit-content;
+    display: flex;
+    width: fit-content;
 }
 
 .change-button {
-  width: 113px;
-  height: 35px;
-  border-radius: 10px;
-  font-size: 10px;
-  font-weight: bold;
-  margin-right: 10px;
+    width: 113px;
+    height: 35px;
+    border-radius: 10px;
+    font-size: 10px;
+    font-weight: bold;
+    margin-right: 10px;
 
-  -webkit-transition: all 0.7s;
-     -moz-transition: all 0.7s;
-      -ms-transition: all 0.7s;
-       -o-transition: all 0.7s;
-          transition: all 0.7s;
+    -webkit-transition: all 0.7s;
+    -moz-transition: all 0.7s;
+    -ms-transition: all 0.7s;
+    -o-transition: all 0.7s;
+    transition: all 0.7s;
 }
 
 .change-button:hover {
-  opacity: 0.8;
+    opacity: 0.8;
 }
 
 .change-button.cancel-changes-button {
-  border: 2px solid #fff;
-  background-color: #2E85EC;
+    border: 2px solid #fff;
+    background-color: #2e85ec;
 }
 
 .change-button.save-changes-button {
-  border: 0px solid #fff;
-  background-color: #fff;
-  color: #2E85EC;
+    border: 0px solid #fff;
+    background-color: #fff;
+    color: #2e85ec;
 }
 
 #done {
-  background-color: #41DC8F;
+    background-color: #41dc8f;
 }
 
 .save-icon {
-  height: 24px;
-  width: 24px;
+    height: 24px;
+    width: 24px;
 }
 
 /* ------------ Crop -------------- */
 
-.container-crop { 
-  height: 100% !important;
+.container-crop {
+    height: 100% !important;
 }
 
 #cropped_image {
-  display: block;
-  max-height: 300px;
+    display: block;
+    max-height: 300px;
 }
 
 .btn-group-crop {
-  display: flex !important; 
-  justify-content: space-between !important; 
-  align-items: center !important;
-  padding: 25px;
+    display: flex !important;
+    justify-content: space-between !important;
+    align-items: center !important;
+    padding: 25px;
 }
 
 .btn-crop-outline {
-  border: 1px solid #878787;
-  border-radius: 99px;
-  background-color: #fff;
-  color: #878787;
+    border: 1px solid #878787;
+    border-radius: 99px;
+    background-color: #fff;
+    color: #878787;
 }
 
 .btn-crop-outline.zoom {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 30px;
-  height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
 }
 
 .btn-crop-filled {
-  border-radius: 99px;
-  background-color: #2E85EC;
+    border-radius: 99px;
+    background-color: #2e85ec;
 }
 
 .cropper-view-box {
-  outline: 1px solid #fff;
-  outline-color: rgba(255, 255, 255, 1);
+    outline: 1px solid #fff;
+    outline-color: rgba(255, 255, 255, 1);
 }
 
 .cropper-point {
-  background-color: #fff;
+    background-color: #fff;
 }
 
 .add-tag {
-  background-color: #fff;
-  color: #636363;
-  min-width: fit-content;
-  cursor: pointer;
-  font-size: 12px;
-  border-radius: 999px;
-  border: 1px solid #636363;
-  margin: 0 5px 5px 0;
-  -webkit-transition: all 0.7s;
-     -moz-transition: all 0.7s;
-      -ms-transition: all 0.7s;
-       -o-transition: all 0.7s;
-          transition: all 0.7s;
+    background-color: #fff;
+    color: #636363;
+    min-width: fit-content;
+    cursor: pointer;
+    font-size: 12px;
+    border-radius: 999px;
+    border: 1px solid #636363;
+    margin: 0 5px 5px 0;
+    -webkit-transition: all 0.7s;
+    -moz-transition: all 0.7s;
+    -ms-transition: all 0.7s;
+    -o-transition: all 0.7s;
+    transition: all 0.7s;
 }
 
 .add-tag:hover {
-  opacity: 0.7;
+    opacity: 0.7;
 }
 
-.notification-table-cointainer .table thead > tr > td:last-child, .table thead > tr > th:last-child,
-.notification-table-cointainer .table thead > tr > td:first-child, .table thead > tr > th:first-child {
-  border-radius: 0;
-  -webkit-border-radius: 0 !important;
-  -moz-border-radius: 0 !important;
-  padding: 20px;
+.notification-table-cointainer .table thead > tr > td:last-child,
+.table thead > tr > th:last-child,
+.notification-table-cointainer .table thead > tr > td:first-child,
+.table thead > tr > th:first-child {
+    border-radius: 0;
+    -webkit-border-radius: 0 !important;
+    -moz-border-radius: 0 !important;
+    padding: 20px;
 }
-
 
 #notification-table tr {
-  height: 90px;
-  max-height: 90px;
+    height: 90px;
+    max-height: 90px;
 }
 
 #notification-table-count tr {
-  height: 90px;
-  max-height: 90px;
+    height: 90px;
+    max-height: 90px;
 }
 
 #notification-table > label {
-  margin: 25px 0 25px 0 !important;
+    margin: 25px 0 25px 0 !important;
 }
 
 .table-number-input {
-  width: 45px;
-  padding: 10px;
-  height: 45px;
+    width: 45px;
+    padding: 10px;
+    height: 45px;
 }
 
 .min-visitors-input {
-  width: 100px !important;
+    width: 100px !important;
 }
 
 .notification-table-cointainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: stretch;
-  margin: 0 -15px 0 -15px;
+    display: flex;
+    flex-direction: row;
+    justify-content: stretch;
+    margin: 0 -15px 0 -15px;
 }
 
-.notification-table-cointainer .selectable{
-  width: 10px;
+.notification-table-cointainer .selectable {
+    width: 10px;
 }
 
 .notification-table-cointainer .notification-counts {
-  width: 100%;
+    width: 100%;
 }
 
 .notification-table-cointainer table tr {
-  height: 70px;
+    height: 70px;
 }
 
 a:focus,
 button:focus,
 input:focus,
 textarea:focus {
-  -webkit-outline: 1px solid #2BB2FF;
-     -moz-outline: 1px solid #2BB2FF;
-      -ms-outline: 1px solid #2BB2FF;
-       -o-outline: 1px solid #2BB2FF;
-          outline: 1px solid #2BB2FF;
-  }
+    -webkit-outline: 1px solid #2bb2ff;
+    -moz-outline: 1px solid #2bb2ff;
+    -ms-outline: 1px solid #2bb2ff;
+    -o-outline: 1px solid #2bb2ff;
+    outline: 1px solid #2bb2ff;
+}
 
 .molda-crop {
-  display: flex !important; 
-  justify-content: center !important;
-  align-items: center !important;
-  padding: 0 !important;
-  margin: 0 10px 0 10px; 
-  background-color: black;
-  min-height: 250px;
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+    padding: 0 !important;
+    margin: 0 10px 0 10px;
+    background-color: black;
+    min-height: 250px;
 }
 
 #zoom-slide {
-  padding: 0 !important;
+    padding: 0 !important;
 }
 
 .editor-container {
-  max-width: 670px;
+    max-width: 670px;
 }
 
 .switch-holder.labeled {
-  display: flex;
+    display: flex;
 }
 
 .switch-holder.labeled .switch {
-  margin-right: 7px;
+    margin-right: 7px;
 }
 
 .switch-label {
-  display: flex;
-  align-items: center;
-  color: #37474F;
-  font-weight: bold;
-  margin-bottom: 0;
+    display: flex;
+    align-items: center;
+    color: #37474f;
+    font-weight: bold;
+    margin-bottom: 0;
 }
 
 .switch-label.active:after {
-  content: 'Ativado';
+    content: "Ativado";
 }
 
 .switch-label:not(.active):after {
-  content: 'Desativado';
+    content: "Desativado";
 }
 
 .verify-button {
-  background: #41DC8F;
-  color: #FFFFFF;
-  border: none;
-  border-radius: 8px;
-  width: 200px;
-  padding: 5px;
+    background: #41dc8f;
+    color: #ffffff;
+    border: none;
+    border-radius: 8px;
+    width: 200px;
+    height: 42px;
+    padding: 5px;
+}
+
+.verified-button {
+    background-color: #ffffff;
+    color: #454545;
+    border: 1px solid #454545;
+    border-radius: 8px;
+    width: 200px;
+    height: 42px;
+    padding: 5px;
+}
+
+.modal-footer.verify-phone {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .modal-body.centered {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .code-input-container {
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    margin-bottom: 10px;
 }
 
 .code-input {
-  width: 56px;
-  height: 56px;
+    width: 56px;
+    height: 56px;
+    text-align: center;
+    font-size: 36px;
 }
 
+#modal_verify_phone p {
+    font-size: 14px;
+    text-align: center;
+    color: #808080;
+}
 
+.warning-input {
+    border: 1px solid #f50000;
+}
 
+.resend-code {
+    color: #2e85ec !important;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.resend-code.disabled {
+    pointer-events: none;
+    cursor: default;
+    opacity: 0.7;
+}
+
+.verify-error {
+    color: #f50000 !important;
+    font-size: 14px !important;
+    text-align: center;
+}
