Working in javascript of page

--- a/public/modules/projects/css/style.css
+++ b/public/modules/projects/css/style.css
@@ -294,3 +294,9 @@
     border-top-right-radius: 8px !important;
     border-bottom-right-radius: 8px !important;
 }
+
+.bg-afiliate-icon{
+    background-color: #F2F8FF;
+    border-radius: 8px;
+}
+
