--- a/public/modules/finances/css/multi-finances.css
+++ b/public/modules/finances/css/multi-finances.css
@@ -155,6 +155,14 @@ body {
 .owl-carousel .owl-next.disabled::before{
     color: #929292;
 }
+.owl-carousel .owl-prev::before,
+.owl-carousel .owl-prev.disabled::before {
+    margin-right: 2.5px
+}
+.owl-carousel .owl-next::before,
+.owl-carousel .owl-next.disabled::before {
+    margin-left: 2.5px
+}
 .owl-carousel .prev-slide{
     background: url(nav-icon.png) no-repeat scroll 0 0;
     left: -33px;
@@ -558,6 +566,22 @@ input:checked + .slider::before {
     -webkit-transition: 0.3s;
     -o-transition: 0.3s;
     transition: 0.3s;
+}
+
+#text-description-debit-pending {
+    font-size: 12px;
+    color: #959595;
+    text-align: center;
+    margin: 20px 0;
+}
+
+#just-value-show{
+    padding: 0;
+}
+
+#modal-withdrawal-custom-footer .btn {
+    padding: 12px;
+    font-weight: bold;
 }
 @media (max-width: 991px) {
     .new-title {
