--- a/public/modules/finances/css/new-finances.css
+++ b/public/modules/finances/css/new-finances.css
@@ -213,19 +213,20 @@
 
 .nav-btn {
     margin-right: 5px !important;
-    background: transparent;
-    color: #888;
+    background: #FFF;
+    color: #3D4456;
     border-radius: 11px !important;
     border: 1px solid #D2D2D2 !important;
-    font-weight: 700;
+    font-weight: normal !important;
 }
 
 .nav-btn.active {
-    background: #2E85EC !important;
+    background: #FFF !important;
     border: 1px solid #2E85EC !important;
     border-radius: 11px;
     opacity: 1 !important;
-    color: white !important;
+    color: #2E85EC !important;
+    font-weight: 700 !important;
 }
 
 
@@ -329,7 +330,7 @@ strong span {
 .nav-tabs .nav-link {
     text-transform: none;
     font-weight: bold;
-    background-color: #D9D9D9;
+    background-color: #FCFCFC;
     padding: 15px;
     color: #767676;
 
@@ -357,7 +358,7 @@ strong span {
 }
 
 .nav-tabs .nav-link:hover {
-    background-color: #E9E9E9;
+    background-color: #D9D9D9;
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
     -ms-transition: all 0.3s;
@@ -439,6 +440,10 @@ select, .select-pad {
 .balance-resume h5{
     margin-top: 0;
     margin-bottom: 6px
+}
+
+.form-group input {
+    padding: 10px 35px 12px 16px
 }
 
 @media (min-width: 768px) {
