--- a/public/modules/finances/css/table.css
+++ b/public/modules/finances/css/table.css
@@ -1,8 +1,8 @@
 .table thead > tr > td, .table thead > tr > th {
     background-color: #FEFEFE;
     padding: 24px 10px !important;
-    color: #15034C;
-    font-size: 16px;
+    color: #15034C !important;
+    font-size: 16px !important;
 }
 
 thead {
