--- a/public/modules/global/css/new-site.css
+++ b/public/modules/global/css/new-site.css
@@ -749,7 +749,7 @@ input[type=radio] {
 }
 
 .table-striped tbody tr:nth-of-type(2n+1) {
-    background-color: #FFF !important;
+    background-color: #FFF;
 }
 
 /* TABLES */
