adjusting new formrequest, method and js

--- a/public/modules/projects/css/style.css
+++ b/public/modules/projects/css/style.css
@@ -244,7 +244,12 @@
     }
 }
 
-/* new version by J */
+/* CHANGE TO NEW CONFIGURATION PAGE */
+.f-grow{
+    flex-grow: 1;
+}
+
+/* /////////// CARD 1 PROJECT DETAILS /////////// */
 .product-chargeback{
     border-top-left-radius: 8px;
     border-bottom-left-radius: 0px;
@@ -273,22 +278,35 @@
     border-left: 1px solid #F1F1F1;
 }
 
-.type-comission{
-    border-radius: 60px;
-}
-
 .resume-sales{
     background-color: #FAFAFA
 }
 
-/* cardfixed bottom */
 
-.final-card{
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
+/* ///////////////////////////////// END CARD 1 */
+
+
+
+/* /////////// CARD 3 IDENTIFICATION /////////// */
+.dropify-wrapper{
+    height: 246px !important;
+    border: 1px dashed #2E85EC !important;
+    border-radius: 8px !important;
 }
-.f-grow{
-    flex-grow: 1;
+
+.file-icon{
+    color: #2E85EC !important;
+}
+
+
+/* ///////////////////////////////// END CARD 3 */
+
+
+
+/* /////////// CARD 4 AFFILIATIONS /////////// */
+.bg-afiliate-icon{
+    background-color: #F2F8FF;
+    border-radius: 8px;
 }
 
 .percent-border{
@@ -296,18 +314,36 @@
     border-bottom-right-radius: 8px !important;
 }
 
-.bg-afiliate-icon{
-    background-color: #F2F8FF;
-    border-radius: 8px;
+.type-comission{
+    border-radius: 60px;
 }
-
-.dropify-wrapper{
-    height: 246px !important;
-    border: 1px dashed #2E85EC !important;
-    border-radius: 8px !important;
+#first-click[type="radio"]:checked + label {
+    background-color:#2E85EC !important;
+    color: #FFF;
+}
+#last-click[type="radio"]:checked + label {
+    background-color:#2E85EC !important;
+    color: #FFF;
 }
 
 .ql-toolbar.ql-snow{
     border-top-left-radius: 8px !important;
     border-top-right-radius: 8px !important;
 }
+
+#url-affiliates{
+    outline: none
+}
+
+
+/* //////////////////////////////// END CARD 4 */
+
+
+/* /////////////// FOOTER CARD SALVE OR CANCEL */
+.final-card{
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+}
+
+
+/* /////////////////////////// END FOOTER CARD */
