--- a/public/modules/checkouteditor/css/style.css
+++ b/public/modules/checkouteditor/css/style.css
@@ -21,6 +21,19 @@
     width: 100%;
 }
 
+#checkout_editor {
+    -webkit-transition: all 0.7s;
+    -moz-transition: all 0.7s;
+    -ms-transition: all 0.7s;
+    -o-transition: all 0.7s;
+    transition: all 0.7s;
+}
+
+.low-opacity {
+    opacity: 0.5;
+    pointer-events:none;
+}
+
 .select-type {
     grid-area: select-type;
     display: flex;
@@ -52,6 +65,14 @@
 
 .editor-buttons {
     grid-area: buttons;
+    bottom: 0; 
+    padding: 0;
+    z-index: 1;
+    position: relative;
+}
+
+.editor-buttons.page-content {
+    padding: 0 !important;
 }
 
 .checkout-content {
@@ -309,16 +330,14 @@ hr {
     justify-content: space-between;
     align-items: center;
     height: 60px;
-    width: 700px;
+    width: inherit;
     padding: 10px 20px 10px 20px;
-    z-index: 9999;
-
-    position: fixed;
     bottom: 0;
-
     border-radius: 10px 10px 0 0;
     background-color: #2e85ec;
     color: #fff;
+
+    position: absolute;
 }
 
 .save-changes-button-group {
@@ -356,8 +375,12 @@ hr {
     color: #2e85ec;
 }
 
-#done {
+#save_success {
     background-color: #41dc8f;
+}
+
+#save_error {
+    background-color: #ff3347;
 }
 
 .save-icon {
@@ -572,18 +595,18 @@ textarea:focus {
 }
 
 .modal-body.centered {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: Center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: Center;
 }
 
 #modal_verify_content {
-  min-height: 350px;
+    min-height: 350px;
 }
 
 #modal_verified_content {
-  min-height: 350px;
+    min-height: 350px;
 }
 
 .code-input-container {
@@ -629,13 +652,30 @@ textarea:focus {
     text-align: center;
 }
 
-.icon-verified-modal{
-  width: 115px;
-  margin-bottom: 10px;
+.icon-verified-modal {
+    width: 115px;
+    margin-bottom: 10px;
 }
-
 
 #checkout_banner_hidden {
     position: absolute;
     left: -9999px;
-  }
+}
+
+/* @media (min-width: 992px) {
+    .save-changes {
+        width: 1100px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .save-changes {
+        width: 1170px;
+    }
+}
+
+@media (min-width: 1680px) {
+    .save-changes {
+        width: 1273px;
+    }
+} */
